tests/NormalTests/paczka1/fuzzy1/48627546.err
Error in line 6: A90 A519 4,4
Error in line 3: tmMesv3r S365 26,1
Error in line 8: A90 S160 57,9
Error in line 11: A90 S365 26,2
Error in line 4: 1VyhM97VEq A90 35,2
Error in line 20: Y5AoeoL A519 311,65
Error in line 22: 1VyhM97VEq A519 42,1
Error in line 21: Y5AoeoL A519 11,8
Error in line 25: NOmxMvdJlwJ S365 83,0
Error in line 30: Y5AoeoL S365 84,8
